--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ yolov3.weights
 detection_1.jpg
 detection_2.jpg
 detections.gif
+airport.mp4
+car_chase_01.mp4
+car_chase_02.mp4
+overpass.mp4
+car_chase_01
